<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.raulmartinezperez.ubiqumproject.MainActivity">

    <Button
        android:text="@string/goto_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textSize="20sp"
        android:id="@+id/go_to_messages_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/main_head"
        android:textSize="25sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/products"
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:scrollbars="vertical"
        android:text="@string/product"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_weight="0.5"
        android:text="@string/product"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:gravity="center">

        <Button
            android:id="@+id/add_more_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/add_more_button" />

        <Button
            android:id="@+id/purchase_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/purchase_button" />

    </LinearLayout>
</LinearLayout>
