<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/checkout_title"
        android:textSize="25sp"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/product"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold"
        android:id="@+id/total_price_checkout" />

    <Button
        android:text="@string/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textSize="20sp"
        android:id="@+id/checkout_confirm_button" />
</LinearLayout>